--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                 <!-- </div> -->
                 <!-- <div class="col"> w-md-50 w-lg-25-->
-                    <div class="card w-100  mx-auto my-md-0" style="width: 18rem;">
+                    <div class="card w-100  mx-auto mx-md-5 mb-5" style="width: 18rem;">
                         <img src="images/DSC05845.2e16d0ba.fill-735x490.jpg" class="card-img-top" alt="engineers">
                         <div class="card-body">
                           <h5 class="card-title text-uppercase">architecture</h5>
