changed the font-size in small size

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <h2 class="text-uppercase font-size-45">construction service</h2>
                 <h2 class="third text-uppercase font-size-45 color-yellow">creative & professional</h2>
                 <p class="px-5  d-md-block">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia commodi sit alias accusantium amet eum tempore odit temporibus consequuntur doloribus error necessitatibus cumque quos, autem id labore ab eligendi perspiciatis maxime. Id hic tempore distinctio accusamus eius aliquam illum.</p>
-            <button class="btn btn-warning btn-responsive btn-sm text-capitalize text-center mr-md-3 my-4 mr-2">show more</button>
-            <button class="btn btn-warning btn-responsive btn-sm text-capitalize text-center ml-md-3 my-4 ml-2">view project</button>
+            <button class="btn btn-warning btn-responsive text-capitalize text-center mr-md-3 my-4 mr-2">show more</button>
+            <button class="btn btn-warning btn-responsive text-capitalize text-center ml-md-3 my-4 ml-2">view project</button>
             </div>
         </div>
     </section> 
